--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@ body {
 }
 
 main {
-    margin: 5rem auto;
+    margin: 2rem auto;
 }
 
 main h1 {
@@ -65,13 +65,12 @@ main h1 {
     cursor: pointer;
 }
 
-.searchbox button:hover, .searchbox button:focus {
+.searchbox button:hover {
     border: 0.2rem solid black;
     background-color: white;
     color: black;
     transform: scale(95%);
     transition: all 0.2s;
-    outline: none;
 }
 
 .hidden {
